# GraphSearch

./: CMakeLists.txt  README.md
include/app/: app.h  bfs.h  graph.h  node.h
include/auxiliary/: logger.h  test.h
